# brickshift

./: .gitignore  README.md  pyproject.toml
backend/: README.md  brickshift-requests.http  pyproject.toml
backend/mysite/: db.sqlite3  manage.py
backend/mysite/base/: serializers.py  urls.py  views.py
backend/mysite/calgen/: apps.py  models.py  serializers.py  urls.py  views.py
backend/mysite/calgen/management/commands/: generate_calendar_weeks.py
backend/mysite/calgen/migrations/: 0001_initial.py  0002_calenderweek_event_week.py  0002_event.py  0003_rename_calenderweek_calendarweek_and_more.py
backend/mysite/ki/: apps.py  models.py  serializers.py  urls.py  views.py
backend/mysite/ki/migrations/: 0001_initial.py
backend/mysite/mysite/: settings.py  urls.py
brickshift/: manage.py
brickshift/brickshift/: asgi.py  settings.py  wsgi.py
brickshift/calgen/: apps.py  models.py
brickshift/main/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: .prettierrc  package.json  quasar.config.js
frontend/src/boot/: auth.store.js  axios.js
frontend/src/components/: CreateEventForm.vue  EventTable.vue  LogoutBtn.vue
frontend/src/components/event/: CreateAgendaDialog.vue  CreateAgendaDialogForm.vue  CreateAgendaDialogUpload.vue  EventEdit.vue
frontend/src/components/sidebar/: AppSidebar.vue
frontend/src/components/week/: WeekCard.vue
frontend/src/layouts/: LoginLayout.vue  MainLayout.vue
frontend/src/pages/: ErrorNotFound.vue  IndexPage.vue  LoginPage.vue  ProfilePage.vue  UserManagement.vue  WeekPage.vue
frontend/src/router/: index.js  routes.js
frontend/src/services/validators/: event-validator.js
frontend/src/stores/: auth.js  index.js  settings.js  weeks.js
mysite/calgen/: models.py  urls.py  views.py
mysite/calgen/migrations/: 0003_event_date.py
mysite/mysite/: settings.py  urls.py
