[tool.poetry]
name = "brickshift"
version = "0.1.0"
description = ""
authors = ["Kerem Zopcuk <keremzopcuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.7"
icalendar = "^5.0.10"
django-ical = "^1.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
